kube/whiteboard-service.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whiteboard-service-deployment
  labels:
    app: whiteboard-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whiteboard-service
  template:
    metadata:
      labels:
        app: whiteboard-service
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: whiteboard-service
        image: cloudbordcontainer.azurecr.io/whiteboard-service:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
          hostPort: 33077
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-cloudbord-kv"
---
apiVersion: v1
kind: Service
metadata:
  name: whiteboard-loadbalancer
spec:
  selector:
    app: whiteboard-service
  ports:
  - protocol: TCP
    port: 33077
    targetPort: 80
  type: LoadBalancer
